--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ main h2 {
 
 /* Add Student Styles Below */
 .jane-style {
-    color: hotpink;
-    background-color: black;
+    color: teal;
+    background-color: hotpink;
     padding: 3px;
 }
 
